# ai-interview-agent

./: .env.example  .gitignore  README.md  config.py  constants.py  generate_graph.py  logger.py  main.py  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: evaluate_answer.py  fetch_session.py  generate_question.py
api/: conversation.py  interview.py  report.py  session.py  stt.py  tts.py
database/: connection.py  models.py
schemas/: agent.py  conversation.py  interview.py  session.py
services/: llm_service.py
templates/: base.html  index.html  interview.html  report.html
